#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(vertebra-erl, 0.3.0)
AC_CONFIG_SRCDIR([include.mk.in])

AC_ERLANG_NEED_ERL
AC_ERLANG_NEED_ERLC

AC_PROG_INSTALL
AC_PROG_SED

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([include.mk])
AC_CONFIG_FILES([src.include.mk])
AC_OUTPUT
